--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Background</title>
+  <title>Design</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<div class="frame"></div>
+
 </body>
 </html>
